fixed dark mode

--- a/src/assets/components/styles/cart.css
+++ b/src/assets/components/styles/cart.css
@@ -28,3 +28,10 @@
     transform: translateX(0);
   }
 } */
+.logo {
+  filter: none;
+}
+
+.dark .logo {
+  filter: brightness(0) invert(1);
+}
